--- a/Maravilhosa/index.html
+++ b/Maravilhosa/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Roboto+Slab:700|Roboto:400,400i">
-    <link rel="stylesheet" href="style.css">
-    <title>M de maravilhosa</title>
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900|Roboto+Slab:700|Roboto:400,400i">
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js" type="text/javascript" defer ></script>
+        <title>M de maravilhosa</title>
 </head>
 
 <body>
 
-    <nav>
-        <div class="navbar">
-            <div class="navbar_logotipo">
-                <img src="img/logo-white.png" alt="Logotipo M de Maravilhosa">
-            </div>
-        </div>
-    </nav>
+    <!-- Barra de Navegação -->
 
     <!-- Cabeçalho -->
 
    
-
     <!-- Secao Maravilhosa -->
 
    
-     <!-- Secao Recado -->
+    <!-- Secao Recado -->
 
 
 
@@ -36,10 +30,6 @@
 
     <!-- Footer -->
 
-   
-
-
-    <script src="script.js"></script>
 </body>
 
 </html>
