adiciona maravilhosas primeira parte

--- a/index.html
+++ b/index.html
@@ -46,144 +46,144 @@
 
                 <!-- Maravilhosa 1 -->
                 <div class="maravilhosas__perfil">
-                    <a href="https://projeto-final-teens2-raissa-barata.netlify.app/" target="_blank">
-                        <img src="./img/29-frida-maria-eduarda.jpg" alt="Foto de perfil" >
+                    <a href="https://musing-lovelace-7ff09b.netlify.app/" target="_blank">
+                        <img src="img\img_maravilhosas\29-frida-maria-eduarda.jpg" alt="Foto de perfil" >
                         <p>Frida Kahlo</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 2 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://projetofinal-adriellyinocencio-kiki.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Bruxinha_Kiki.jpg" alt="Foto de perfil">
+                        <p>Bruxinha Kiki</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 3 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://biasantos-projetofinal.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\mamis-maravilhosa.jpg" alt="Foto de perfil">
+                        <p>Veronice Santos</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 4 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://projetofinal-aelin-galathynius.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Aelin Ashryver Galathynius.jpg" alt="Foto de perfil">
+                        <p>Aelin Ashryver Galathynius</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 5 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://bruna-pereira-projeto-final-teens4.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Maria Angela dos Santos Pereira.jpg" alt="Foto de perfil">
+                        <p>Maria Angela dos Santos Pereira</p>
                     </a>
                 </div>
 
 
                 <!-- Maravilhosa 6 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://projetofinal-camilliabate.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\complemento_fundo.png" alt="Foto de perfil">
+                        <p>Camilli Costa da Silva Abate</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 7 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
+                    <a href="https://marielreyesmilk.netlify.app/" target="blank">
                         <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                        <p>Mariel reyes milk</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 8 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://tender-franklin-6ea5f2.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\priscilla_maravilhosa.jpeg" alt="Foto de perfil">
+                        <p>Priscilla R. Bittencourt</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 9 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://infallible-lovelace-f8b911.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\WhatsApp Image 2021-12-21 at 20.22.22.jpeg" alt="Foto de perfil">
+                        <p>Yennefer de Vengerbeard</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 10 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://zicaassis-gabrielasilva-projetofinal-teens4.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Zica-Assis.jpg" alt="Foto de perfil">
+                        <p>Zica Assis</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 11 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://mystifying-jones-f55b7b.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Luiza Helena Trajano.jpg" alt="Foto de perfil">
+                        <p>Luiza Helena Trajano </p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 12 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
+                    <a href="https://projeto-final-reprograma-teens.netlify.app/" target="blank">
                         <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                        <p>Audrey Hepburn</p>
                     </a>
                 </div>
                 <!-- Maravilhosa 13 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://epic-raman-7d605d.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\anitta.jpg" alt="Foto de perfil">
+                        <p>Anitta</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 14 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://projetofinalmariaquiteria.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Isabelle Santos- Maria_Quiteria.jpg" alt="Foto de perfil">
+                        <p>Maria Quitéria de Jesus</p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 15 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://viuvanegra-juliacauduro.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\viuva-negra.jpeg" alt="Foto de perfil">
+                        <p>Viúva Negra </p>
                     </a>
                 </div>
 
                 <!-- Maravilhosa 16 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="img\img_maravilhosas\Joan-Clarke.jpg" target="blank">
+                        <img src="https://joan-clarke.netlify.app/" alt="Foto de perfil">
+                        <p>Joan Clarke</p>
                     </a>
                 </div>
 
                 <!--Marivilhosa LE-->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://malala-yousafzai-kanandaantas.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\imgperfil.jpg" alt="Foto de perfil">
+                        <p>Malala Yousafzai</p>
                     </a>
                 </div>
                 <!-- Maravilhosa 17 -->
                 <div class="maravilhosas__perfil">
-                    <a href="" target="blank">
-                        <img src="" alt="Foto de perfil">
-                        <p>Nome da Maravilhosa Homenageada!</p>
+                    <a href="https://nostalgic-booth-355ede.netlify.app/" target="blank">
+                        <img src="img\img_maravilhosas\Screenshot-2021-09-24-at-15-49-57-Carolina-Maria-de-Jesus-autora-do-livro-_Quarto-de-Despejo_-copy-3-jpg-webp-WEBP-Image....png" alt="Foto de perfil">
+                        <p>Carolina Maria de Jesus</p>
                     </a>
                 </div>
                 <!-- Maravilhosa 18 -->
