add juliana work

--- a/index.html
+++ b/index.html
@@ -232,7 +232,14 @@
                         <p>Rachel Maia</p>
                     </a>
                 </div>
-               
+                                <!-- MC Mirela - Juliana -->
+                                <div class="maravilhosas__perfil">
+                                    <a href="https://reprograma-teens4-julianavan.netlify.app/" >
+                                        <img src="https://reprograma-teens4-julianavan.netlify.app/img/317269-confira-12-fatos-curiosos-sobre-a-vida-d-diapo-1.jpg" alt="MC Mirela">
+                                        <p>MC Mirela</p>
+                                    </a>
+                                </div>
+                 
         </section>
     </main>
 
