add trabalho alice

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 </div>
                 <!-- Heidy Lamar - Alice Araújo -->
                 <div class="maravilhosas__perfil">
-                    <a href="" >
+                    <a href="https://wonderful-mclean-9c16fc.netlify.app/" >
                         <img src="./imgMaravilhosas/Heidy Lamar - Alice Araújo/heidy.jpg" alt="Heidy Lamar">
                         <p>Heidy Lamar</p>
                     </a>
