--- a/index.html
+++ b/index.html
@@ -232,14 +232,20 @@
                         <p>Rachel Maia</p>
                     </a>
                 </div>
-                                <!-- MC Mirela - Juliana -->
-                                <div class="maravilhosas__perfil">
-                                    <a href="https://reprograma-teens4-julianavan.netlify.app/" >
-                                        <img src="https://reprograma-teens4-julianavan.netlify.app/img/317269-confira-12-fatos-curiosos-sobre-a-vida-d-diapo-1.jpg" alt="MC Mirela">
-                                        <p>MC Mirela</p>
-                                    </a>
-                                </div>
-                 
+                <!-- MC Mirela - Juliana Vanessa da Cruz -->
+                <div class="maravilhosas__perfil">
+                    <a href="https://reprograma-teens4-julianavan.netlify.app/" >
+                        <img src="https://reprograma-teens4-julianavan.netlify.app/img/317269-confira-12-fatos-curiosos-sobre-a-vida-d-diapo-1.jpg" alt="MC Mirela">       
+                        <p>MC Mirela</p>
+                    </a>
+                </div>
+                <!-- Mary Jackson - Gabrielly Silva Vitor -->
+                <div class="maravilhosas__perfil">
+                    <a href="https://sad-saha-97367c.netlify.app/" >
+                        <img src="./imgMaravilhosas/gabrielly - mary jackson/mj.png" alt="Mary Jackson">       
+                        <p>Mary Jackson</p>
+                    </a>
+                </div>
         </section>
     </main>
 
